[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "hyperactive"
version = "4.8.1"
description = "An optimization and data collection toolbox for convenient and fast prototyping of computationally expensive models."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["visualization", "data-science"]
authors = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
maintainers = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
]

dependencies = [
  "numpy >=1.18.1, <3.0.0",
  "tqdm >=4.48.0, <5.0.0",
  "pandas <3.0.0",
  "gradient-free-optimizers >=1.2.4, <2.0.0",
  "scikit-base <1.0.0",
  "scikit-learn <1.8.0",
]

[project.optional-dependencies]
sklearn-integration = [
  "scikit-learn <1.8.0",
]
build = [
  "setuptools",
  "build",
  "wheel",
]
test = [
  "pytest == 8.3.5",
  "flake8",
  "pytest-cov",
  "pathos",
]
all_extras = [
  "hyperactive[build]",
  "hyperactive[test]",
  "hyperactive[integrations]",
]


[project.urls]
"Homepage" = "https://github.com/SimonBlanke/Hyperactive"
"Bug Reports" = "https://github.com/SimonBlanke/Hyperactive/issues"
"Source" = "https://github.com/SimonBlanke/Hyperactive/"
